# PYTHON-AND-AI-ACCELERATOR-

./: register-kernels.ps1  setup-new-project.ps1  setup-vscode.ps1
AI-Accelerator-python-basics/: intro_python1.ipynb  intro_python2.ipynb  intro_python3.ipynb  main.py  pyproject.toml
Class 1/: .gitignore  Untitled-1.ipynb  main.py  pyproject.toml  test.ipynb
Class 2/Example 1/: pyproject.toml  test1-example.ipynb
Class 2/Example 2/: js_to_python_module3.ipynb  pyproject.toml
Class 3/Example 1/: js_to_python_module.ipynb  main.py  pyproject.toml
Class 3/Example 2/: intro_pandas1.ipynb  processed_startups.csv  pyproject.toml
Class 4/Example 1/: Untitled-1.ipynb  intro_pandas1.ipynb  pyproject.toml  sales.csv
Class 4/Example 2/: machine-learning.ipynb  pyproject.toml
Class 5/Example 1/: employee_cleaning.ipynb  ml1.ipynb  pandas1.ipynb  pandas2.ipynb  pandas3.ipynb  pyproject.toml
Class 5/Example 2/: Week3_Pandas_Workflow_class_assignment.ipynb  Week3_Pandas_Workflow_class_exercise.ipynb  main.py  pyproject.toml
Resources/: AI & BUSINESS AUTOMATION Notes.docx  INDIVIDUAL ASSIGNMENT 1.docx  Week2_Automation_Notes..docx
Resources/Week 1/: Week1_Topic1_WhyPython_Setup.pptx  Week1_Topic2_PythonBasics_Part1 (1).pptx
Resources/Week 2/: Copy of WEEK TWO AI.pptx
Resources/Week 3/: dataviz_teaching_slides.pptx
Resources/Week 4/: Week4_Topic1_ML_Part1_LinearRegression.pptx
Resources/Week 5/: Week3_Pandas_Codetrain.pptx
Resources/Week 6/: Week3_Topic2_Pandas2.pptx
